<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wood"
    tools:context=".Jogo.ModosDeJogo">

    <ImageButton
        android:id="@+id/imageButtonBackGameModes"
        android:layout_width="66dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/wood"
        android:contentDescription="@string/backbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonLocalGame"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="?attr/actionModeCloseDrawable"
        tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck" />

    <Button
        android:id="@+id/buttonLocalGame"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:backgroundTint="@color/dark_wood"
        android:text="@string/p_1v1"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179" />

    <Button
        android:id="@+id/buttonOnlineGame"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:backgroundTint="@color/dark_wood"
        android:text="@string/p_3"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLocalGame"
        app:layout_constraintVertical_bias="0.175" />

    <Button
        android:id="@+id/button3WayGame"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:backgroundTint="@color/dark_wood"
        android:text="@string/p_local"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonOnlineGame"
        app:layout_constraintVertical_bias="0.51" />

    <TextView
        android:id="@+id/textViewHowToPlayGameModes"
        android:layout_width="217dp"
        android:layout_height="61dp"
        android:layout_marginBottom="24dp"
        android:alpha="0.5"
        android:text="@string/how_to_play"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="32sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/buttonLocalGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>