<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wood"
    tools:context=".Jogo.MenuPrincipal">

    <Button
        android:id="@+id/buttonProfile"
        android:layout_width="94dp"
        android:layout_height="78dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/dark_green"
        android:text="@string/profile"
        android:textColor="@color/dark_wood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="301dp"
        android:layout_height="90dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/welcome"
        android:textColor="@color/dark_wood"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAbout"
        app:layout_constraintVertical_bias="0.043" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="281dp"
        android:layout_height="245dp"
        android:layout_marginBottom="84dp"
        android:contentDescription="@string/reversiboardimg_description"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWelcome"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/how_to_play_othello_0"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/buttonPlay"
        android:layout_width="298dp"
        android:layout_height="80dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/dark_green"
        android:text="@string/play"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWelcome"
        app:layout_constraintVertical_bias="0.85" />

    <Button
        android:id="@+id/buttonAbout"
        android:layout_width="94dp"
        android:layout_height="78dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/dark_green"
        android:text="@string/about"
        android:textColor="@color/dark_wood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonLanguage"
        android:layout_width="94dp"
        android:layout_height="78dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/dark_green"
        android:text="@string/language"
        android:textColor="@color/dark_wood"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonAbout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>